fix endpoint  approval
