# BE/app/controllers/approval-controller.js
@@ -16,6 +16,7 @@ class approvalController {
 
             const findSurat = await letterQueries.findSurat(payloadParams)
             if(!findSurat) { return responseHendler.notFound(res, message('letter').notFoundResource)}
+            if(findSurat.jenis_surat !== 'surat masuk') { return responseHendler.badRequest(res, message('must surat keluar').errorMessage)}
 
             const findUser = await userQueries.findUserByName(payloadBody)
             if(!findUser) { return responseHendler.notFound(res, message('user tujuan').notFoundResource)}
@@ -52,6 +53,31 @@ class approvalController {
             return responseHendler.internalError(res, message(key).errorMessage)
         }
         
+    }
+
+    async approve (req, res) {
+        try {
+            const payloadParams = req.params
+            const payloadBody = req.body
+            const auth = req.userId
+
+            const findUpproval = await approvalQueries.findOneApprovalUser(auth, payloadParams)
+            if(!findUpproval) { return responseHendler.notFound(res, message('approval').notFoundResource)}
+            if(findUpproval.status == 'approve') { return responseHendler.badRequest(res,message('this document has been approved').errorMessage)}
+
+            const approve = await approvalQueries.updateApproval(payloadBody,'approve', payloadParams)
+            if(!approve) { return responseHendler.badRequest(res, message('cannot approve, please ceck the error').errorMessage)}
+
+            return responseHendler.ok(res, message('approve').success)
+
+
+        }
+
+        catch (err) {
+            const key = err.message
+            console.log(err)
+            return responseHendler.internalError(res, message(key).errorMessage)
+        }
     }
 }
 
