# BE/app/routers/approval-router.js
@@ -11,5 +11,7 @@ const tokenjwt = new tokenJwt()
 router.post('/api/approval/:id', tokenjwt.verifyToken, authorization(1), approvalcontroller.createApproval)
 //only supervisor can access this endpoint
 router.get('/api/approval', tokenjwt.verifyToken, authorization(2), approvalcontroller.getApproval)
+//only supervisor can access this endpoint
+router.patch('/api/approval/:id', tokenjwt.verifyToken, authorization(2), approvalcontroller.approve)
 
 module.exports = router
